-- TODO-App database schema reference
-- PostgreSQL-oriented documentation schema based on tasks/migrations/0001_initial.py.
-- Django migrations are the source of truth; tasks/test_schema_reference.py guards drift.
--
-- Differences called out explicitly:
--   * Recurrence and TaskEvent validation lives in Python (clean / choices), not CHECK.
--   * Task.order uses PositiveIntegerField without a database CHECK constraint.

CREATE TABLE tasks_tasklist (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(120) NOT NULL,
    session_key VARCHAR(80) NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT unique_task_list_name_per_session UNIQUE (session_key, name)
);

CREATE INDEX tasks_tasklist_session_key_idx
    ON tasks_tasklist (session_key);

CREATE TABLE tasks_recurrence (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    frequency VARCHAR(12) NOT NULL,
    interval INTEGER NOT NULL DEFAULT 1,
    weekday_mask SMALLINT NULL,
    day_of_month SMALLINT NULL,
    end_date DATE NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW()
);

CREATE TABLE tasks_task (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    task_list_id BIGINT NOT NULL REFERENCES tasks_tasklist(id) ON DELETE CASCADE,
    parent_id BIGINT NULL REFERENCES tasks_task(id) ON DELETE CASCADE,
    title VARCHAR(255) NOT NULL,
    notes TEXT NOT NULL DEFAULT '',
    due_date TIMESTAMPTZ NULL,
    status VARCHAR(8) NOT NULL DEFAULT 'open',
    priority VARCHAR(8) NOT NULL DEFAULT 'medium',
    "order" INTEGER NOT NULL DEFAULT 0,
    recurrence_id BIGINT NULL REFERENCES tasks_recurrence(id) ON DELETE SET NULL,
    spawned_from_id BIGINT NULL REFERENCES tasks_task(id) ON DELETE SET NULL,
    completed_at TIMESTAMPTZ NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    deleted_at TIMESTAMPTZ NULL,
    CONSTRAINT task_status_valid CHECK (status IN ('open', 'done')),
    CONSTRAINT task_priority_valid CHECK (priority IN ('low', 'medium', 'high'))
);

CREATE INDEX tasks_task_task_list_id_idx
    ON tasks_task (task_list_id);

CREATE INDEX tasks_task_parent_id_idx
    ON tasks_task (parent_id);

CREATE INDEX tasks_task_status_idx
    ON tasks_task (status);

CREATE INDEX tasks_task_due_date_idx
    ON tasks_task (due_date);

CREATE INDEX tasks_task_deleted_at_idx
    ON tasks_task (deleted_at);

CREATE INDEX tasks_task_list_parent_order_idx
    ON tasks_task (task_list_id, parent_id, "order");

CREATE TABLE tasks_taskevent (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    task_id BIGINT NULL REFERENCES tasks_task(id) ON DELETE SET NULL,
    task_list_id BIGINT NULL REFERENCES tasks_tasklist(id) ON DELETE SET NULL,
    session_key VARCHAR(80) NOT NULL,
    action VARCHAR(20) NOT NULL,
    changes JSONB NOT NULL DEFAULT '{}'::jsonb,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW()
);

CREATE INDEX tasks_taskevent_session_key_idx
    ON tasks_taskevent (session_key);

CREATE INDEX tasks_taskevent_created_at_idx
    ON tasks_taskevent (created_at DESC);

CREATE INDEX tasks_taskevent_task_id_idx
    ON tasks_taskevent (task_id);

CREATE INDEX tasks_taskevent_task_list_id_idx
    ON tasks_taskevent (task_list_id);
